welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: not found: value larguer
  	{if (getX() == larguer-1 && gety() == hauteur-1) {return true}
                       ^ColumnByColumn:12: error: not found: value gety
  	{if (getX() == larguer-1 && gety() == hauteur-1) {return true}
                                    ^ColumnByColumn:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  	{if (getX() == larguer-1 && gety() == hauteur-1) {return true}
                                                                 ^ColumnByColumn:12: warning: enclosing method positionFinale has result type Unit: return value discarded
  	{if (getX() == larguer-1 && gety() == hauteur-1) {return true}
                                                          ^ColumnByColumn:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
     else {return false}}
                  ^ColumnByColumn:13: warning: enclosing method positionFinale has result type Unit: return value discarded
     else {return false}}
           ^ColumnByColumn:17: error: not found: value getx
  	{while (!estFaceMur) {numeroterSol(); setPos(getx(), gety()+1)} }
                                                     ^ColumnByColumn:17: error: not found: value gety
  	{while (!estFaceMur) {numeroterSol(); setPos(getx(), gety()+1)} }
                                                             ^ColumnByColumn:21: error: not found: value getx
  	{if (estFaceMur) {numeroterSol(); setPos(getx()+1, 0)}}
                                                 ^ColumnByColumn:25: error: value unary_! is not a member of Unit
  while (!positionFinale())
         ^